# LEDBox

./: LEDMatrixCAD.f3d  README.md  ledbox.service  pyproject.toml  requirements.txt  run.py
assets/fonts/: unscii-8-alt.pbm  unscii-8-thin.pbm
common/: display.py  display_manager.py  exc.py  layout.py  module_base.py  plugin.py  util.py  window_manager.py
modules/: clock.py  httptest.py  image.py  test.py
modules/debug/: text.py
